14605
{code}
scala> class A { def foo { def bar(a: Int = 1) = a; bar(); val u = 0 } }
<console>:4: error: forward reference extends over definition of value u
       class A { def foo { def bar(a: Int = 1) = a; bar(); val u = 0 } }
                                                    ^
{code}
